--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -3,8 +3,8 @@
 version: '3.2'
 
 services:
-  jenkins-devops:
-    image: garystafford/jenkins-devops:2018.04.13
+  jenkops:
+    image: garystafford/jenkins-devops:2018.04.19
     hostname: jenkins
     ports:
     - "8083:8080/tcp"
